--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -11,7 +11,14 @@ body,
   box-sizing: border-box;
   width: 100%;
   -webkit-tap-highlight-color: transparent;
+}
+
+html {
+  /* For Mobile which width is less than 390px */
   font-size: 16px;
+  @media (max-width: 390px) {
+    font-size: 14.5px;
+  }
 }
 
 *,
