--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -10,6 +10,7 @@ body,
   position: relative;
   box-sizing: border-box;
   width: 100%;
+  height: 100%;
   -webkit-tap-highlight-color: transparent;
 }
 
