--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,3 +1,6 @@
+@import "./common/variables";
+@import "./common/keyframes";
+
 html,
 body,
 #root {
@@ -12,6 +15,7 @@ body,
   width: 100%;
   height: 100%;
   -webkit-tap-highlight-color: transparent;
+  background-color: map-get($black, main);
 }
 
 html {
@@ -40,3 +44,10 @@ input {
 ::-webkit-scrollbar {
   width: 0px;
 }
+
+@import "./component/home";
+@import "./component/search";
+@import "./component/display";
+@import "./component/noResultHint";
+@import "./component/result";
+@import "./component/topCard";
