--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -49,5 +49,5 @@ input {
 @import "./component/search";
 @import "./component/display";
 @import "./component/noResultHint";
-@import "./component/result";
+@import "./component/fileListResult";
 @import "./component/topCard";
