Add feature of remote viewer

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -47,7 +47,7 @@ input {
 
 @import "./component/home";
 @import "./component/search";
-@import "./component/display";
+@import "./component/viewer";
 @import "./component/noResultHint";
 @import "./component/result";
 @import "./component/topCard";
