Add highlight for selected result

--- a/client/src/styles/common/_variables.scss
+++ b/client/src/styles/common/_variables.scss
@@ -6,6 +6,7 @@ $black: (
 $text-color: (
   input: rgb(255, 255, 255),
   result: rgb(247, 246, 248),
+  resultSelected: rgb(177, 180, 185),
   noData: rgb(207, 210, 215),
   placeHolder: rgb(197, 200, 205)
 );
