--- a/client/src/styles/component/_viewer.scss
+++ b/client/src/styles/component/_viewer.scss
@@ -8,4 +8,21 @@
     left: 50%;
     transform: translateX(-50%);
   }
+
+  & a {
+    position: fixed;
+    right: 20px;
+    top: 20px;
+  }
+
+  .back-to-home-img {
+    opacity: 0.5;
+    height: 2.6rem;
+    width: 2.6rem;
+    cursor: pointer;
+  }
+
+  .connected {
+    filter: map-get($icon-color, default);
+  }
 }
