--- a/client/src/styles/component/_result.scss
+++ b/client/src/styles/component/_result.scss
@@ -7,6 +7,7 @@
   line-height: 1.6rem;
   margin: 2rem 1rem 3rem 1rem;
   opacity: 0;
+  transition: color 0.5s;
   @extend %fadeIn;
 
   &--song-list {
@@ -19,7 +20,11 @@
     grid-template-areas:"fileName fileFolder";
   }
 
-  &--selected {
+  &--on-load {
+    color: rgb(160, 160, 160);
+  }
+
+  &--loaded {
     color: rgb(88, 88, 88);
   }
 }
