--- a/client/src/styles/component/_viewer.scss
+++ b/client/src/styles/component/_viewer.scss
@@ -9,14 +9,14 @@
     transform: translateX(-50%);
   }
 
-  & a {
+  & .to-home-container {
     position: fixed;
     right: 20px;
     top: 20px;
   }
 
   .back-to-home-img {
-    opacity: 0.5;
+    opacity: 0.15;
     height: 2.6rem;
     width: 2.6rem;
     cursor: pointer;
