--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -50,4 +50,5 @@ input {
 @import "./component/viewer";
 @import "./component/noResultHint";
 @import "./component/result";
+@import "./component/common";
 @import "./component/topCard";
